src/objects/cb5__CBTransaction__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>cb5__CBAccount__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CB_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>cb5__CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CB_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>cb5__CBDivision__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CB_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBKey__c</fullName>
        <label>CBKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>cb5__CBPeriod__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CB_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>cb5__CBVariable1__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CBTransactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>cb5__CBVariable2__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CBTransactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>cb5__CBVariable3__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CBTransactions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CB Transaction</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__CBDivision__c</columns>
        <columns>cb5__CBAccount__c</columns>
        <columns>cb5__CBBudgetYear__c</columns>
        <columns>cb5__CBPeriod__c</columns>
        <columns>cb5__Value__c</columns>
        <columns>cb5__CBVariable1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CBTransaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>